--- a/index.html
+++ b/index.html
@@ -29,17 +29,18 @@
 					<span class="bar3"></span>
 			  </div>
 				<a class="navbar-brand top" href="#">
-					<img src="img/logo.png" alt="">
+					<img src="img/dupa.png" alt="">
 				</a>
 
 			</div>
 
 			<div class="collapse navbar-collapse" id="main-menu">
 			   <ul class="nav navbar-nav navbar-right">
-				<li><a href="#about">About</a></li>
-				<li><a href="#portfolio">Portfolio</a></li>
+				<li><a href="#about">about</a></li>
+				<li><a href="#portfolio">portfolio</a></li>
+				<li><a href="#press">info</a></li>
 		
-				<li><a href="#brand">Brand</a></li>
+		
 			  </ul>
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
@@ -310,26 +311,6 @@
 		</div>
 	</section>
 	
-	
-	<!-- Brand -->
-	<section id="brand">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-				   <ul class="logo-list list-inline text-center">
-					<li><a href="#" target="_blank"><img src="img/logos/logo1.jpg" alt="client logo" class="img-responsive"/></a></li>
-					<li><a href="#" target="_blank"><img src="img/logos/logo2.jpg" alt="client logo" class="img-responsive"/></a></li>
-					<li><a href="#" target="_blank"><img src="img/logos/logo3.jpg" alt="client logo" class="img-responsive"/></a></li>
-					<li><a href="#" target="_blank"><img src="img/logos/logo4.jpg" alt="client logo" class="img-responsive"/></a></li>
-					<li><a href="#" target="_blank"><img src="img/logos/logo5.jpg" alt="client logo" class="img-responsive"/></a></li>
-					<li><a href="#" target="_blank"><img src="img/logos/logo6.jpg" alt="client logo" class="img-responsive"/></a></li>
-					<li><a href="#" target="_blank"><img src="img/logos/logo7.jpg" alt="client logo" class="img-responsive"/></a></li>
-					<li><a href="#" target="_blank"><img src="img/logos/logo8.jpg" alt="client logo" class="img-responsive"/></a></li>
-				  </ul>
-				</div>
-			</div>
-		</div>
-	</section>
 	
 	
 	<!-- Copyright -->
