--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Madzia Zalewa - artist portfolio</title>
+    <title>Madzia Zalewa - artist portfolio.</title>
 
     <!-- Css -->
     <link href="css/bootstrap.css" rel="stylesheet">
